--- a/Quiz 1/Question 2/Q2-code.ipynb
+++ b/Quiz 1/Question 2/Q2-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "9cc61912",
    "metadata": {},
    "outputs": [
@@ -883,7 +883,7 @@
     "        page_words = page.extract_words()\n",
     "        for word_info in page_words:\n",
     "            words.append(word_info['text'].lower())\n",
-    "\n",
+    "# Credit to Copilot for .extract_words and the word_info usage\n",
     "resume_words = []\n",
     "for string in words:\n",
     "    m =re.search(r\"[a-z]{2,}\", string)\n",
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "77aee6cb",
    "metadata": {},
    "outputs": [
@@ -1785,6 +1785,7 @@
     "        page_words = page.extract_words()\n",
     "        for word_info in page_words:\n",
     "            words.append(word_info['text'].lower())\n",
+    "# Credit to Copilot for .extract_words and the word_info usage\n",
     "\n",
     "specific_words = []\n",
     "for string in words:\n",
@@ -1809,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "b1fc18e8",
    "metadata": {},
    "outputs": [
@@ -2690,6 +2691,8 @@
     "            for word_info_2 in page_words_2:\n",
     "                words_2.append(word_info_2['text'].lower())\n",
     "\n",
+    "# Credit to Copilot for .extract_words and the word_info usage\n",
+    "\n",
     "words_good_2 = []\n",
     "for string in words_2:\n",
     "    m =re.search(r\"[a-z]{2,}\", string)\n",
@@ -2710,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "20740004",
    "metadata": {},
    "outputs": [
@@ -3589,6 +3592,8 @@
     "            page_words_2 = page.extract_words()\n",
     "            for word_info_2 in page_words_2:\n",
     "                words_2.append(word_info_2['text'].lower())\n",
+    "\n",
+    "# Credit to Copilot for .extract_words and the word_info usage\n",
     "\n",
     "words_good_2 = []\n",
     "for string in words_2:\n",
