folder and .md started

--- a/Quiz 1/Question 3/Q3-code.ipynb
+++ b/Quiz 1/Question 3/Q3-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "id": "a18a89c4",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "id": "f5998cf7",
    "metadata": {},
    "outputs": [
@@ -58,13 +58,319 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(variablename.isna().mean()*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "5f018282",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variablename = variablename.dropna()\n",
+    "variablename['INCIDENT NUMBER'] = variablename['INCIDENT NUMBER'].apply(\n",
+    "    lambda x: '25-' + str(x)[4:] if str(x).startswith('2500') else x\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "63bfe8ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Monday  Tuesday  Wednesday  Thursday  Friday  Saturday  Sunday\n",
+      "Hour                                                                \n",
+      "0          7        6          4         1       2         7       4\n",
+      "1          8        7          7         4       3         5       7\n",
+      "2          4        3          2         2       3         7       7\n",
+      "3          6        8          9         1      10         4       4\n",
+      "4          2        4          5         2       6         4       4\n",
+      "5          8        3          6         5       3         2       4\n",
+      "6          5        5          6         6       8         6       9\n",
+      "7         13       13          6         7      11         4       7\n",
+      "8         11        9         13         7       6         4      11\n",
+      "9          8       14         11        12      12         7      11\n",
+      "10        16       12          9        10      11        13      11\n",
+      "11        15       13         12        17      16        11      10\n",
+      "12        15       12         11        17      19         9      17\n",
+      "13        16       11         10         9      12        14      18\n",
+      "14        15       19         11        15      15        14      13\n",
+      "15        13       19         23        22      15        13      14\n",
+      "16        17       18         10        15      16        11       9\n",
+      "17        19       11         17         8      23        14      13\n",
+      "18        16       16         22        20       8        13       8\n",
+      "19        16        8         15        12      12        15       7\n",
+      "20        15       12         21        14      12        18       9\n",
+      "21        11       13          8        10      12        11       7\n",
+      "22         4       11         15         8      12        16      12\n",
+      "23         7        6          5         6       7        15       5\n"
+     ]
+    }
+   ],
+   "source": [
+    "week_array_array = [\n",
+    "    ['Monday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]],\n",
+    "    ['Tuesday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]],\n",
+    "    ['Wednesday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]],\n",
+    "    ['Thursday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]],\n",
+    "    ['Friday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]], ['Saturday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]],\n",
+    "    ['Sunday', [[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0], [21, 0], [22, 0], [23, 0]]]]\n",
+    "date_array = [\n",
+    " ['2/18/25', 'Tuesday'],\n",
+    " ['2/19/25', 'Wednesday'],\n",
+    " ['2/20/25', 'Thursday'],\n",
+    " ['2/21/25', 'Friday'],\n",
+    " ['2/22/25', 'Saturday'],\n",
+    " ['2/23/25', 'Sunday'],\n",
+    " ['2/24/25', 'Monday'],\n",
+    " ['2/25/25', 'Tuesday'],\n",
+    " ['2/26/25', 'Wednesday'],\n",
+    " ['2/27/25', 'Thursday'],\n",
+    " ['2/28/25', 'Friday'],\n",
+    " ['3/1/25', 'Saturday'],\n",
+    " ['3/2/25', 'Sunday'],\n",
+    " ['3/3/25', 'Monday'],\n",
+    " ['3/4/25', 'Tuesday'],\n",
+    " ['3/5/25', 'Wednesday'],\n",
+    " ['3/6/25', 'Thursday'],\n",
+    " ['3/7/25', 'Friday'],\n",
+    " ['3/8/25', 'Saturday'],\n",
+    " ['3/9/25', 'Sunday'],\n",
+    " ['3/10/25', 'Monday'],\n",
+    " ['3/11/25', 'Tuesday'],\n",
+    " ['3/12/25', 'Wednesday'],\n",
+    " ['3/13/25', 'Thursday'],\n",
+    " ['3/14/25', 'Friday'],\n",
+    " ['3/15/25', 'Saturday'],\n",
+    " ['3/16/25', 'Sunday'],\n",
+    " ['3/17/25', 'Monday'],\n",
+    " ['3/18/25', 'Tuesday'],\n",
+    " ['3/19/25', 'Wednesday'],\n",
+    " ['3/20/25', 'Thursday'],\n",
+    " ['3/21/25', 'Friday'],\n",
+    " ['3/22/25', 'Saturday'],\n",
+    " ['3/23/25', 'Sunday'],\n",
+    " ['3/24/25', 'Monday'],\n",
+    " ['3/25/25', 'Tuesday'],\n",
+    " ['3/26/25', 'Wednesday'],\n",
+    " ['3/27/25', 'Thursday'],\n",
+    " ['3/28/25', 'Friday'],\n",
+    " ['3/29/25', 'Saturday'],\n",
+    " ['3/30/25', 'Sunday'],\n",
+    " ['3/31/25', 'Monday'],\n",
+    " ['4/1/25', 'Tuesday'],\n",
+    " ['4/2/25', 'Wednesday'],\n",
+    " ['4/3/25', 'Thursday'],\n",
+    " ['4/4/25', 'Friday'],\n",
+    " ['4/5/25', 'Saturday'],\n",
+    " ['4/6/25', 'Sunday'],\n",
+    " ['4/7/25', 'Monday'],\n",
+    " ['4/8/25', 'Tuesday'],\n",
+    " ['4/9/25', 'Wednesday'],\n",
+    " ['4/10/25', 'Thursday'],\n",
+    " ['4/11/25', 'Friday'],\n",
+    " ['4/12/25', 'Saturday'],\n",
+    " ['4/13/25', 'Sunday'],\n",
+    " ['4/14/25', 'Monday'],\n",
+    " ['4/15/25', 'Tuesday'],\n",
+    " ['4/16/25', 'Wednesday'],\n",
+    " ['4/17/25', 'Thursday'],\n",
+    " ['4/18/25', 'Friday'],\n",
+    " ['4/19/25', 'Saturday'],\n",
+    " ['4/20/25', 'Sunday'],\n",
+    " ['4/21/25', 'Monday'],\n",
+    " ['4/22/25', 'Tuesday'],\n",
+    " ['4/23/25', 'Wednesday'],\n",
+    " ['4/24/25', 'Thursday'],\n",
+    " ['4/25/25', 'Friday'],\n",
+    " ['4/26/25', 'Saturday'],\n",
+    " ['4/27/25', 'Sunday'],\n",
+    " ['4/28/25', 'Monday'],\n",
+    " ['4/29/25', 'Tuesday'],\n",
+    " ['4/30/25', 'Wednesday'],\n",
+    " ['5/1/25', 'Thursday'],\n",
+    " ['5/2/25', 'Friday'],\n",
+    " ['5/3/25', 'Saturday'],\n",
+    " ['5/4/25', 'Sunday'],\n",
+    " ['5/5/25', 'Monday'],\n",
+    " ['5/6/25', 'Tuesday'],\n",
+    " ['5/7/25', 'Wednesday'],\n",
+    " ['5/8/25', 'Thursday'],\n",
+    " ['5/9/25', 'Friday'],\n",
+    " ['5/10/25', 'Saturday'],\n",
+    " ['5/11/25', 'Sunday'],\n",
+    " ['5/12/25', 'Monday'],\n",
+    " ['5/13/25', 'Tuesday'],\n",
+    " ['5/14/25', 'Wednesday'],\n",
+    " ['5/15/25', 'Thursday'],\n",
+    " ['5/16/25', 'Friday'],\n",
+    " ['5/17/25', 'Saturday'],\n",
+    " ['5/18/25', 'Sunday'],\n",
+    " ['5/19/25', 'Monday'],\n",
+    " ['5/20/25', 'Tuesday'],\n",
+    " ['5/21/25', 'Wednesday'],\n",
+    " ['5/22/25', 'Thursday'],\n",
+    " ['5/23/25', 'Friday'],\n",
+    " ['5/24/25', 'Saturday'],\n",
+    " ['5/25/25', 'Sunday'],\n",
+    " ['5/26/25', 'Monday'],\n",
+    " ['5/27/25', 'Tuesday'],\n",
+    " ['5/28/25', 'Wednesday'],\n",
+    " ['5/29/25', 'Thursday'],\n",
+    " ['5/30/25', 'Friday'],\n",
+    " ['5/31/25', 'Saturday'],\n",
+    " ['6/1/25', 'Sunday'],\n",
+    " ['6/2/25', 'Monday'],\n",
+    " ['6/3/25', 'Tuesday'],\n",
+    " ['6/4/25', 'Wednesday'],\n",
+    " ['6/5/25', 'Thursday'],\n",
+    " ['6/6/25', 'Friday'],\n",
+    " ['6/7/25', 'Saturday'],\n",
+    " ['6/8/25', 'Sunday'],\n",
+    " ['6/9/25', 'Monday'],\n",
+    " ['6/10/25', 'Tuesday'],\n",
+    " ['6/11/25', 'Wednesday'],\n",
+    " ['6/12/25', 'Thursday'],\n",
+    " ['6/13/25', 'Friday'],\n",
+    " ['6/14/25', 'Saturday'],\n",
+    " ['6/15/25', 'Sunday'],\n",
+    " ['6/16/25', 'Monday'],\n",
+    " ['6/17/25', 'Tuesday'],\n",
+    " ['6/18/25', 'Wednesday'],\n",
+    " ['6/19/25', 'Thursday'],\n",
+    " ['6/20/25', 'Friday'],\n",
+    " ['6/21/25', 'Saturday'],\n",
+    " ['6/22/25', 'Sunday'],\n",
+    " ['6/23/25', 'Monday'],\n",
+    " ['6/24/25', 'Tuesday'],\n",
+    " ['6/25/25', 'Wednesday'],\n",
+    " ['6/26/25', 'Thursday'],\n",
+    " ['6/27/25', 'Friday'],\n",
+    " ['6/28/25', 'Saturday'],\n",
+    " ['6/29/25', 'Sunday'],\n",
+    " ['6/30/25', 'Monday'],\n",
+    " ['7/1/25', 'Tuesday'],\n",
+    " ['7/2/25', 'Wednesday'],\n",
+    " ['7/3/25', 'Thursday'],\n",
+    " ['7/4/25', 'Friday'],\n",
+    " ['7/5/25', 'Saturday'],\n",
+    " ['7/6/25', 'Sunday'],\n",
+    " ['7/7/25', 'Monday'],\n",
+    " ['7/8/25', 'Tuesday'],\n",
+    " ['7/9/25', 'Wednesday'],\n",
+    " ['7/10/25', 'Thursday'],\n",
+    " ['7/11/25', 'Friday'],\n",
+    " ['7/12/25', 'Saturday'],\n",
+    " ['7/13/25', 'Sunday'],\n",
+    " ['7/14/25', 'Monday'],\n",
+    " ['7/15/25', 'Tuesday'],\n",
+    " ['7/16/25', 'Wednesday'],\n",
+    " ['7/17/25', 'Thursday'],\n",
+    " ['7/18/25', 'Friday'],\n",
+    " ['7/19/25', 'Saturday'],\n",
+    " ['7/20/25', 'Sunday'],\n",
+    " ['7/21/25', 'Monday'],\n",
+    " ['7/22/25', 'Tuesday'],\n",
+    " ['7/23/25', 'Wednesday'],\n",
+    " ['7/24/25', 'Thursday'],\n",
+    " ['7/25/25', 'Friday'],\n",
+    " ['7/26/25', 'Saturday'],\n",
+    " ['7/27/25', 'Sunday'],\n",
+    " ['7/28/25', 'Monday'],\n",
+    " ['7/29/25', 'Tuesday'],\n",
+    " ['7/30/25', 'Wednesday'],\n",
+    " ['7/31/25', 'Thursday'],\n",
+    " ['8/1/25', 'Friday'],\n",
+    " ['8/2/25', 'Saturday'],\n",
+    " ['8/3/25', 'Sunday'],\n",
+    " ['8/4/25', 'Monday'],\n",
+    " ['8/5/25', 'Tuesday'],\n",
+    " ['8/6/25', 'Wednesday'],\n",
+    " ['8/7/25', 'Thursday'],\n",
+    " ['8/8/25', 'Friday'],\n",
+    " ['8/9/25', 'Saturday'],\n",
+    " ['8/10/25', 'Sunday'],\n",
+    " ['8/11/25', 'Monday'],\n",
+    " ['8/12/25', 'Tuesday'],\n",
+    " ['8/13/25', 'Wednesday'],\n",
+    " ['8/14/25', 'Thursday'],\n",
+    " ['8/15/25', 'Friday'],\n",
+    " ['8/16/25', 'Saturday'],\n",
+    " ['8/17/25', 'Sunday'],\n",
+    " ['8/18/25', 'Monday'],\n",
+    " ['8/19/25', 'Tuesday'],\n",
+    " ['8/20/25', 'Wednesday'],\n",
+    " ['8/21/25', 'Thursday'],\n",
+    " ['8/22/25', 'Friday'],\n",
+    " ['8/23/25', 'Saturday'],\n",
+    " ['8/24/25', 'Sunday'],\n",
+    " ['8/25/25', 'Monday'],\n",
+    " ['8/26/25', 'Tuesday'],\n",
+    " ['8/27/25', 'Wednesday'],\n",
+    " ['8/28/25', 'Thursday'],\n",
+    " ['8/29/25', 'Friday'],\n",
+    " ['8/30/25', 'Saturday'],\n",
+    " ['8/31/25', 'Sunday'],\n",
+    " ['9/1/25', 'Monday'],\n",
+    " ['9/2/25', 'Tuesday'],\n",
+    " ['9/3/25', 'Wednesday'],\n",
+    " ['9/4/25', 'Thursday'],\n",
+    " ['9/5/25', 'Friday'],\n",
+    " ['9/6/25', 'Saturday'],\n",
+    " ['9/7/25', 'Sunday'],\n",
+    " ['9/8/25', 'Monday'],\n",
+    " ['9/9/25', 'Tuesday'],\n",
+    " ['9/10/25', 'Wednesday'],\n",
+    " ['9/11/25', 'Thursday'],\n",
+    " ['9/12/25', 'Friday'],\n",
+    " ['9/13/25', 'Saturday'],\n",
+    " ['9/14/25', 'Sunday'],\n",
+    " ['9/15/25', 'Monday'],\n",
+    " ['9/16/25', 'Tuesday']\n",
+    "]\n",
+    "#yay, I love date_array!!!\n",
+    "for date in variablename['ALARM DATE TIME']:\n",
+    "    if date is None or (isinstance(date, float) and pd.isna(date)):\n",
+    "        continue\n",
+    "    for dater in date_array:\n",
+    "        if date.split()[0]==dater[0]:\n",
+    "            for day in week_array_array:\n",
+    "                if day[0]==dater[1]:\n",
+    "                    for hour in day[1]:\n",
+    "                        if hour[0]==int(date.split()[1].split(':')[0]):\n",
+    "                            hour[1]=hour[1]+1\n",
+    "                            \n",
+    "                            break\n",
+    "                    break\n",
+    "                \n",
+    "\n",
+    "#credit to ChatGPT for the formatting below \n",
+    "data = {}\n",
+    "hours = list(range(24))  # 0 to 23\n",
+    "\n",
+    "for day_entry in week_array_array:\n",
+    "    day_name = day_entry[0]\n",
+    "    counts = [hour_count[1] for hour_count in day_entry[1]]  # extract counts\n",
+    "    data[day_name] = counts\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data, index=hours)\n",
+    "df.index.name = 'Hour'\n",
+    "\n",
+    "# Print\n",
+    "print(df)"
    ]
   }
  ],
